# fs-zrobot

boot/: devicetree.dtb  uImage
etc/: hostname
etc/hostapd/: hostapd.conf
root/: .bash_history  .viminfo  ins_mod.sh  wlan_ap.sh
root/APIForArm/zrarm_api/demo/: Makefile  iic.c  iic.c~  test  uarm.c~  uarm.h~  zrarm.c  zrarm.c~  zrarm.h
root/APIForArm/zrcar_api/demo/: zrcar_test
root/APIForCar/zrcar_api/demo/: main.c  zrcar_test
root/tictactoe/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  PlayGameMain.cpp  TicTacToe.h  camera.yml  cmake_install.cmake  cmakeclear.sh  codeRecog2D.h  cvdrawingutils.cpp  marker.cpp  marker.h  tictactoe  tictactoe.cbp  tictactoe.layout  uArmMovements.c  uArmMovements.h  uarm.c
root/zrobot_drivers/: arm_drv.sh
root/zrobot_drivers/armgpio/: .gpio_driver.ko.cmd  .gpio_driver.mod.o.cmd  .gpio_driver.o.cmd  Makefile  gpio_driver.c  gpio_driver.ko  gpio_driver.mod.c  modules.order
root/zrobot_drivers/gpio/: .gpio_driver.ko.cmd  .gpio_driver.mod.o.cmd  .gpio_driver.o.cmd  Makefile  gpio_driver.ko  gpio_driver.mod.c
root/zrobot_drivers/optical/: .optical_driver.ko.cmd  .optical_driver.mod.o.cmd  .optical_driver.o.cmd
root/zrobot_drivers/ultrasonic/: .ultrasonic_driver.ko.cmd  .ultrasonic_driver.mod.o.cmd  .ultrasonic_driver.o.cmd
root/zrobot_drivers/wheel/: .wheel_driver.ko.cmd  .wheel_driver.mod.o.cmd  .wheel_driver.o.cmd  wheel_driver.c  wheel_driver.ko  wheel_driver.mod.c
var/lib/misc/: udhcpd.leases
var/lib/urandom/: random-seed
var/log/: dmesg  dmesg.0  lastlog  udev  wtmp
(+9 files in other folders)
